bases/nexus-campaign-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-campaign-api-service
  labels:
    app: nexus-campaign-api
spec:
  type: ClusterIP
  selector:
    app: nexus-campaign-api
  ports:
  - name: http
    port: 80
    targetPort: 8001
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
