bases/nexus-campaign-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-campaign-api-route
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: substituir no overlay OKE
    nginx.org/cors-allow-origin: "http://localhost:5173"
    nginx.org/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.org/cors-allow-headers: "Content-Type, Authorization, X-Requested-With"
    nginx.org/cors-allow-credentials: "true"
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "campaign-api.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: X-Frame-Options
          value: DENY
        - name: X-Content-Type-Options
          value: nosniff
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"
    backendRefs:
    - name: nexus-campaign-api-service
      port: 80
      weight: 100
